--- a/public/add-pizza.html
+++ b/public/add-pizza.html
@@ -183,6 +183,6 @@
     </div>
   </main>
   <script src="./assets/js/add-pizza.js"></script>
-</body>
+  <script src="./assets/js/idb.js"></script>
 
 </html>
